--- a/provider-payment-8001/src/main/resources/application.properties
+++ b/provider-payment-8001/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.application.name=provider-payment-8001
 # \u670D\u52A1\u7AEF\u53E3
 server.port=8001
 
+# \u70ED\u90E8\u7F72\u914D\u7F6E
+spring.devtools.restart.enabled=true
+
 # \u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,8 +18,9 @@ spring.datasource.password=wotainanle
 mybatis-plus.global-config.banner=true
 # \u6253\u5370sql\u65E5\u5FD7\uFF0C\u592A\u591A\u4E86
 #mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-mybatis-plus.type-aliases-package=com.kon.cloud.entity
+mybatis-plus.type-aliases-package=com.kon.cloud.common.entity
 mybatis-plus.mapper-locations=classpath:mapper/*.xml
+mybatis-plus.global-config.db-config.id-type=auto
 
 # \u65E5\u5FD7\u914D\u7F6E
-logging.level.com.kon.cloud.dao=debug
+logging.level.com.kon.cloud.payment.dao=debug
