--- a/consumer-order-80/src/main/resources/application.properties
+++ b/consumer-order-80/src/main/resources/application.properties
@@ -1,4 +1,16 @@
+# \u670D\u52A1\u540D\u79F0
+spring.application.name=consumer-order-80
+
+# \u670D\u52A1\u7AEF\u53E3
 server.port=80
 
 # \u70ED\u90E8\u7F72\u914D\u7F6E
 spring.devtools.restart.enabled=true
+
+# Eureka\u914D\u7F6E
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+# \u5355\u673A\u7248
+#eureka.client.service-url.defaultZone=http://localhost:7001/eureka
+# \u96C6\u7FA4\u7248
+eureka.client.service-url.defaultZone=http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
