--- a/provider-payment-8001/src/main/resources/application.properties
+++ b/provider-payment-8001/src/main/resources/application.properties
@@ -4,6 +4,15 @@ spring.application.name=provider-payment-8001
 # \u670D\u52A1\u7AEF\u53E3
 server.port=8001
 
+# Eureka\u914D\u7F6E
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+# \u5355\u673A\u7248
+#eureka.client.service-url.defaultZone=http://localhost:7001/eureka
+# \u96C6\u7FA4\u7248
+eureka.client.service-url.defaultZone=http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+
+
 # \u70ED\u90E8\u7F72\u914D\u7F6E
 spring.devtools.restart.enabled=true
 
