--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>provider-payment-8001</module>
+        <module>provider-payment-8002</module>
         <module>consumer-order-80</module>
         <module>cloud-common</module>
         <module>eureka-server-7001</module>
