--- a/eureka-server-7002/src/main/resources/application-standalone.properties
+++ b/eureka-server-7002/src/main/resources/application-standalone.properties
@@ -10,3 +10,6 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 # \u8BBE\u7F6E\u4E0EEureka Server\u4EA4\u4E92\u7684\u5730\u5740\uFF0C\u67E5\u8BE2\u670D\u52A1\u548C\u6CE8\u518C\u670D\u52A1\u90FD\u9700\u8981\u4F9D\u8D56\u8FD9\u4E2A\u5730\u5740
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+# \u5173\u95ED\u81EA\u6211\u4FDD\u62A4\uFF0C\u4FDD\u8BC1\u4E0D\u53EF\u7528\u7684\u670D\u52A1\u88AB\u53CA\u65F6\u79FB\u9664
+eureka.server.enable-self-preservation=false
+eureka.server.eviction-interval-timer-in-ms=2000
