--- a/provider-payment-8001/src/main/resources/application.properties
+++ b/provider-payment-8001/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # \u670D\u52A1\u540D\u79F0
-spring.application.name=provider-payment-8001
+spring.application.name=provider-payment
 
 # \u670D\u52A1\u7AEF\u53E3
 server.port=8001
@@ -8,10 +8,17 @@ server.port=8001
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 # \u5355\u673A\u7248
-#eureka.client.service-url.defaultZone=http://localhost:7001/eureka
+eureka.client.service-url.defaultZone=http://localhost:7001/eureka
 # \u96C6\u7FA4\u7248
-eureka.client.service-url.defaultZone=http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
-
+#eureka.client.service-url.defaultZone=http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+# \u914D\u7F6E\u5B9E\u4F8B\u53EA\u663E\u793A\u670D\u52A1\u540D-\u7AEF\u53E3
+eureka.instance.instance-id=${spring.application.name}-${server.port}
+# \u914D\u7F6E\u5B9E\u4F8B\u663E\u793AIP\u5730\u5740
+eureka.instance.prefer-ip-address=true
+# Eureka\u5BA2\u6237\u7AEF\u5411\u670D\u52A1\u7AEF\u53D1\u9001\u5FC3\u8DF3\u7684\u65F6\u95F4\u95F4\u9694\uFF0C\u5355\u4F4D\u4E3A\u79D2\uFF08\u9ED8\u8BA4\u4E3A30\uFF09
+eureka.instance.lease-renewal-interval-in-seconds=1
+# Eureka\u670D\u52A1\u7AEF\u5728\u6536\u5230\u6700\u540E\u4E00\u6B21\u5FC3\u8DF3\u540E\u7B49\u5F85\u65F6\u95F4\u4E0A\u9650\uFF0C\u5355\u4F4D\u4E3A\u79D2\uFF08\u9ED8\u8BA4\u4E3A90\u79D2\uFF09\uFF0C\u8D85\u65F6\u5254\u9664\u670D\u52A1\uFF08\u8981\u4E0Eserver\u7AEF\u914D\u7F6E\u4E00\u81F4\uFF09
+eureka.instance.lease-expiration-duration-in-seconds=2
 
 # \u70ED\u90E8\u7F72\u914D\u7F6E
 spring.devtools.restart.enabled=true
