--- a/provider-payment-8002/src/main/resources/application.properties
+++ b/provider-payment-8002/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 # \u670D\u52A1\u540D\u79F0
-spring.application.name=consumer-order
+spring.application.name=provider-payment
 
 # \u670D\u52A1\u7AEF\u53E3
-server.port=80
-
-# \u70ED\u90E8\u7F72\u914D\u7F6E
-spring.devtools.restart.enabled=true
+server.port=8002
 
 # Eureka\u914D\u7F6E
 eureka.client.register-with-eureka=true
@@ -22,3 +19,24 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.lease-renewal-interval-in-seconds=1
 # Eureka\u670D\u52A1\u7AEF\u5728\u6536\u5230\u6700\u540E\u4E00\u6B21\u5FC3\u8DF3\u540E\u7B49\u5F85\u65F6\u95F4\u4E0A\u9650\uFF0C\u5355\u4F4D\u4E3A\u79D2\uFF08\u9ED8\u8BA4\u4E3A90\u79D2\uFF09\uFF0C\u8D85\u65F6\u5254\u9664\u670D\u52A1\uFF08\u8981\u4E0Eserver\u7AEF\u914D\u7F6E\u4E00\u81F4\uFF09
 eureka.instance.lease-expiration-duration-in-seconds=2
+
+# \u70ED\u90E8\u7F72\u914D\u7F6E
+spring.devtools.restart.enabled=true
+
+# \u6570\u636E\u5E93\u914D\u7F6E
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://mysql.server:3306/cloud-2020?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=wotainanle
+
+# mybatis-plus\u914D\u7F6E
+mybatis-plus.global-config.banner=true
+# \u6253\u5370sql\u65E5\u5FD7\uFF0C\u592A\u591A\u4E86
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus.type-aliases-package=com.kon.cloud.common.entity
+mybatis-plus.mapper-locations=classpath:mapper/*.xml
+mybatis-plus.global-config.db-config.id-type=auto
+
+# \u65E5\u5FD7\u914D\u7F6E
+logging.level.com.kon.cloud.payment.dao=debug
