--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>cloud-common</module>
         <module>eureka-server-7001</module>
         <module>eureka-server-7002</module>
+        <module>zk-provider-payment-8011</module>
+        <module>zk-consumer-order-80</module>
     </modules>
     <packaging>pom</packaging>
 
