--- a/zk-provider-payment-8011/src/main/resources/application.properties
+++ b/zk-provider-payment-8011/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # \u670D\u52A1\u540D\u79F0
-spring.application.name=provider-payment
+spring.application.name=zk-provider-payment
 
 # \u670D\u52A1\u7AEF\u53E3
 server.port=8011
