--- a/consumer-order-80/src/main/resources/application.properties
+++ b/consumer-order-80/src/main/resources/application.properties
@@ -18,7 +18,9 @@ eureka.client.service-url.defaultZone=http://localhost:7001/eureka
 eureka.instance.instance-id=${spring.application.name}-${server.port}
 # \u914D\u7F6E\u5B9E\u4F8B\u663E\u793AIP\u5730\u5740
 eureka.instance.prefer-ip-address=true
+
+# Eureka\u670D\u52A1\u7AEFenable-self-preservation\u8BBE\u7F6E\u4E3Afalse\u65F6\uFF0C\u6253\u5F00\u4EE5\u4E0B\u6CE8\u91CA
 # Eureka\u5BA2\u6237\u7AEF\u5411\u670D\u52A1\u7AEF\u53D1\u9001\u5FC3\u8DF3\u7684\u65F6\u95F4\u95F4\u9694\uFF0C\u5355\u4F4D\u4E3A\u79D2\uFF08\u9ED8\u8BA4\u4E3A30\uFF09
-eureka.instance.lease-renewal-interval-in-seconds=1
+#eureka.instance.lease-renewal-interval-in-seconds=1
 # Eureka\u670D\u52A1\u7AEF\u5728\u6536\u5230\u6700\u540E\u4E00\u6B21\u5FC3\u8DF3\u540E\u7B49\u5F85\u65F6\u95F4\u4E0A\u9650\uFF0C\u5355\u4F4D\u4E3A\u79D2\uFF08\u9ED8\u8BA4\u4E3A90\u79D2\uFF09\uFF0C\u8D85\u65F6\u5254\u9664\u670D\u52A1\uFF08\u8981\u4E0Eserver\u7AEF\u914D\u7F6E\u4E00\u81F4\uFF09
-eureka.instance.lease-expiration-duration-in-seconds=2
+#eureka.instance.lease-expiration-duration-in-seconds=2
