--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <module>zk-consumer-order-80</module>
         <module>consul-provider-payment-8021</module>
         <module>consul-consumer-order-80</module>
+        <module>feign-consumer-order-80</module>
+        <module>hystrix-provider-payment-8031</module>
+        <module>hystrix-consumer-order-80</module>
     </modules>
     <packaging>pom</packaging>
 
