--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>hystrix-provider-payment-8031</module>
         <module>hystrix-consumer-order-80</module>
         <module>hystrix-consumer-dashboard-9001</module>
+        <module>gateway-9527</module>
     </modules>
     <packaging>pom</packaging>
 
