--- a/cloud-config-client-3355/src/main/resources/bootstrap.properties
+++ b/cloud-config-client-3355/src/main/resources/bootstrap.properties
@@ -22,6 +22,9 @@ eureka.instance.prefer-ip-address=true
 # Eureka\u670D\u52A1\u7AEF\u5728\u6536\u5230\u6700\u540E\u4E00\u6B21\u5FC3\u8DF3\u540E\u7B49\u5F85\u65F6\u95F4\u4E0A\u9650\uFF0C\u5355\u4F4D\u4E3A\u79D2\uFF08\u9ED8\u8BA4\u4E3A90\u79D2\uFF09\uFF0C\u8D85\u65F6\u5254\u9664\u670D\u52A1\uFF08\u8981\u4E0Eserver\u7AEF\u914D\u7F6E\u4E00\u81F4\uFF09
 #eureka.instance.lease-expiration-duration-in-seconds=2
 
+# \u70ED\u90E8\u7F72\u914D\u7F6E
+spring.devtools.restart.enabled=true
+
 # \u6784\u6210master\u5206\u652F\u4E0A\u7684config-dev\u7684\u914D\u7F6E\u6587\u4EF6
 spring.cloud.config.label=master
 spring.cloud.config.name=config
