--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
         <module>cloud-config-3344</module>
         <module>cloud-config-client-3355</module>
         <module>cloud-config-client-3366</module>
+        <module>cloud-stream-rabbitmq-provider-8801</module>
+        <module>cloud-stream-rabbitmq-consumer-8811</module>
+        <module>cloud-stream-rabbitmq-consumer-8812</module>
     </modules>
     <packaging>pom</packaging>
 
