--- a/cloud-stream-rabbitmq-consumer-8811/src/main/resources/application.properties
+++ b/cloud-stream-rabbitmq-consumer-8811/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # \u670D\u52A1\u540D\u79F0
-spring.application.name=provider-payment
+spring.application.name=cloud-stream-rabbitmq-consumer
 
 # \u670D\u52A1\u7AEF\u53E3
-server.port=8002
+server.port=8811
 
 # Eureka\u914D\u7F6E
 eureka.client.register-with-eureka=true
@@ -25,25 +25,19 @@ eureka.instance.prefer-ip-address=true
 # \u70ED\u90E8\u7F72\u914D\u7F6E
 spring.devtools.restart.enabled=true
 
-# \u6570\u636E\u5E93\u914D\u7F6E
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql.server:3306/cloud-2020?useUnicode=true&characterEncoding=utf-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=wotainanle
+# \u8BBE\u7F6E\u7EC4\u4EF6\u7C7B\u578B
+spring.cloud.stream.binders.defaultRabbit.type=rabbit
+# \u8BBE\u7F6Erabbitmq\u7684\u76F8\u5173\u73AF\u5883\u914D\u7F6E
+spring.cloud.stream.binders.defaultRabbit.environment.spring.rabbitmq.host=rabbitmq.server
+spring.cloud.stream.binders.defaultRabbit.environment.spring.rabbitmq.port=5672
+spring.cloud.stream.binders.defaultRabbit.environment.spring.rabbitmq.username=rabbit
+spring.cloud.stream.binders.defaultRabbit.environment.spring.rabbitmq.password=rabbit
 
-# mybatis-plus\u914D\u7F6E
-mybatis-plus.global-config.banner=true
-# \u6253\u5370sql\u65E5\u5FD7\uFF0C\u592A\u591A\u4E86
-#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-mybatis-plus.type-aliases-package=com.kon.cloud.common.entity
-mybatis-plus.mapper-locations=classpath:mapper/*.xml
-mybatis-plus.global-config.db-config.id-type=auto
-
-# \u65E5\u5FD7\u914D\u7F6E
-logging.level.com.kon.cloud.payment.dao=debug
-
-# zipkin\u914D\u7F6E
-spring.zipkin.base-url=http://zipkin.server:9411
-# sleuth\u914D\u7F6E\uFF0C\u91C7\u6837\u7387\u503C\u4ECB\u4E8E0-1\uFF0C1\u8868\u793A\u5168\u90E8\u91C7\u96C6
-spring.sleuth.sampler.probability=1
+# \u8868\u793A\u8981\u4F7F\u7528\u7684Exchange\u540D\u79F0\u5B9A\u4E49
+spring.cloud.stream.bindings.input.destination=testExchange
+# \u8BBE\u7F6E\u6D88\u606F\u7C7B\u578B\uFF1Aapplication/json  text/plain
+spring.cloud.stream.bindings.input.content-type=application/json
+# \u8BBE\u7F6E\u8981\u7ED1\u5B9A\u7684\u6D88\u606F\u670D\u52A1\u7684\u5177\u4F53\u8BBE\u7F6E
+spring.cloud.stream.bindings.input.binder=defaultRabbit
+# \u8BBE\u7F6E\u5206\u7EC4(\u4E0D\u540C\u7684\u7EC4\u662F\u53EF\u4EE5\u91CD\u590D\u6D88\u8D39\uFF0C\u540C\u4E00\u4E2A\u7EC4\u5185\u4F1A\u53D1\u751F\u7ADE\u4E89\u5173\u7CFB\uFF0C\u53EA\u6709\u5176\u4E2D\u4E00\u4E2A\u53EF\u4EE5\u6D88\u8D39)
+spring.cloud.stream.bindings.input.group=k1
