--- a/consumer-order-80/pom.xml
+++ b/consumer-order-80/pom.xml
@@ -18,6 +18,12 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- 包含了sleuth+zipkin -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
