--- a/consumer-order-80/src/main/resources/application.properties
+++ b/consumer-order-80/src/main/resources/application.properties
@@ -24,3 +24,8 @@ eureka.instance.prefer-ip-address=true
 #eureka.instance.lease-renewal-interval-in-seconds=1
 # Eureka\u670D\u52A1\u7AEF\u5728\u6536\u5230\u6700\u540E\u4E00\u6B21\u5FC3\u8DF3\u540E\u7B49\u5F85\u65F6\u95F4\u4E0A\u9650\uFF0C\u5355\u4F4D\u4E3A\u79D2\uFF08\u9ED8\u8BA4\u4E3A90\u79D2\uFF09\uFF0C\u8D85\u65F6\u5254\u9664\u670D\u52A1\uFF08\u8981\u4E0Eserver\u7AEF\u914D\u7F6E\u4E00\u81F4\uFF09
 #eureka.instance.lease-expiration-duration-in-seconds=2
+
+# zipkin\u914D\u7F6E
+spring.zipkin.base-url=http://zipkin.server:9411
+# sleuth\u914D\u7F6E\uFF0C\u91C7\u6837\u7387\u503C\u4ECB\u4E8E0-1\uFF0C1\u8868\u793A\u5168\u90E8\u91C7\u96C6
+spring.sleuth.sampler.probability=1
