--- a/provider-payment-8001/src/main/resources/application.properties
+++ b/provider-payment-8001/src/main/resources/application.properties
@@ -42,3 +42,8 @@ mybatis-plus.global-config.db-config.id-type=auto
 
 # \u65E5\u5FD7\u914D\u7F6E
 logging.level.com.kon.cloud.payment.dao=debug
+
+# zipkin\u914D\u7F6E
+spring.zipkin.base-url=http://zipkin.server:9411
+# sleuth\u914D\u7F6E\uFF0C\u91C7\u6837\u7387\u503C\u4ECB\u4E8E0-1\uFF0C1\u8868\u793A\u5168\u90E8\u91C7\u96C6
+spring.sleuth.sampler.probability=1
