--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
         <module>cloud-stream-rabbitmq-provider-8801</module>
         <module>cloud-stream-rabbitmq-consumer-8811</module>
         <module>cloud-stream-rabbitmq-consumer-8812</module>
+        <module>alibaba-provider-payment-9001</module>
+        <module>alibaba-provider-payment-9002</module>
+        <module>alibaba-consumer-order-80</module>
+        <module>alibaba-config-nacos-client-3377</module>
     </modules>
     <packaging>pom</packaging>
 
