--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
         <module>alibaba-provider-payment-9002</module>
         <module>alibaba-consumer-order-80</module>
         <module>alibaba-config-nacos-client-3377</module>
+        <module>alibaba-sentinel-service-8401</module>
+        <module>alibaba-provider-payment-9003</module>
+        <module>alibaba-provider-payment-9004</module>
+        <module>alibaba-sentinel-consumer-order-80</module>
     </modules>
     <packaging>pom</packaging>
 
