seata分布式事务，完结！

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,9 @@
         <module>alibaba-provider-payment-9003</module>
         <module>alibaba-provider-payment-9004</module>
         <module>alibaba-sentinel-consumer-order-80</module>
+        <module>seata-order-service-2001</module>
+        <module>seata-storage-service-2002</module>
+        <module>seata-account-service-2003</module>
     </modules>
     <packaging>pom</packaging>
 
